# privatus

database/scripts/: db-config.sh  db-delete.sh  db-init.sh  db-setup.sh  db-start.sh  db-stop.sh  db-truncate.sh  install-dev.sh
database/scripts/setup/: a-db-create-admin.sh  b-db-create-database.sh  c-db-create-user.sh  d-db-create-schema.sh  e-db-create-roles.sh  f-db-create-tenancy-tables.sh
federation_lib/: .gitignore  CMakeLists.txt  Makefile
federation_lib/cpp/: CMakeLists.txt
federation_lib/cpp/include/: PrivatusLib.hpp  privatus
federation_lib/cpp/include/domain/model/: FederationConfig.hpp  MemberState.hpp
federation_lib/cpp/include/infra/network/: FederationClient.hpp  FederationService.hpp
federation_lib/cpp/include/usecase/: RegisterUsecase.hpp
federation_lib/cpp/src/: PrivatusLib.cpp
federation_lib/cpp/src/domain/model/: FederationConfig.cpp
federation_lib/cpp/src/infra/network/: FederationClient.cpp  FederationService.cpp
federation_lib/cpp/src/usecase/: RegisterUsecase.cpp
federation_lib/cpp/tests/: CMakeLists.txt
federation_lib/cpp/tests/src/: test_cpp.cpp
federation_lib/python/: privatus.cpp
federation_lib/scripts/: build-debug.sh  build-release.sh  clean.sh  format.sh  install-dev.sh  select-compiler.sh  watch.sh
federation_lib/src/: Federation.cpp  FederationConfig.cpp
federation_lib/tests/: test.py
rpc/: api-federation.proto  api-tenancy.proto
rpc/scripts/: build.sh  install-dev.sh  watch.sh
scripts/: test-e2e.sh
tenancy_service/: Makefile  main.go
tenancy_service/debug/: debug.go
tenancy_service/pkg/domain/model/: federation.go  tenancy.go  training.go
tenancy_service/pkg/infra/: ml_service_adapter.go  mpc_service_adapter.go  tenancy_repository.go  tenancy_rest_adapter.go
tenancy_service/pkg/infra/db/: tenancy_db.go  tenancy_db_test.go
tenancy_service/pkg/infra/env/: env.go  env_test.go
tenancy_service/pkg/infra/network/rest/: federation_dto_adapter.go  federation_dto_adapter_test.go  signature_validater.go  tenacy_dto_adapter_test.go  tenancy_dto_adapter.go  tenancy_rest_service.go  tenancy_rest_service_test.go
tenancy_service/pkg/infra/network/rpc/: env.go  ml_service.go  mpc_service.go
tenancy_service/pkg/usecase/: create_tenancy_usecase.go
tenancy_service/scripts/: build.sh  config.sh  install-dev.sh  run.sh  test.sh
tenancy_service/test/integration/: integration_test.go
tenancy_service/test/integration/stub/: tenancy_repository_stub.go  tenancy_rest_stub.go
